# web-server

./: Cargo.toml  README.md
migrations/: 20240421145813_add_users.up.sql
src/: main.rs
src/api/: user.rs
src/db/: mod.rs
src/models/: user.rs
src/services/: user.rs
