[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tokio-postgres = "0.7"
bb8 = "0.8"
bb8-postgres = "0.8"
dotenv = "0.15"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
] }
bcrypt = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
